--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
         textarea {
             font-size: 1.2rem;
         }
+
+        @media screen and (max-width: 450px) {
+            textarea {
+                translate: 350px;
+                max-width: 200px;
+                margin-right: 200px;
+            }
+        }
     </style>
 </head>
 <body>
